Small tweaks in the construction of groups